# stim-cirq-qec

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: architecture.md  validation_report.md
docs/technical_report/: main.tex
docs/whitepaper/: main.tex
examples/: __init__.py  bode_plot_demo.py  coherent_remediation.py  cosmic_ray_demo.py  extended_distances.py  full_pipeline_benchmark.py  generate_additional_figures.py  generate_figures.py  mbl_vs_gst.py  willow_like_drift.py
src/adaptive_qec/: __init__.py
src/adaptive_qec/diagnostics/: __init__.py  gst_benchmark.py  hamiltonian_learner.py  spam_noise.py
src/adaptive_qec/feedback/: __init__.py  controller.py  frequency_analysis.py
src/adaptive_qec/hybrid/: __init__.py  adaptive_sampler.py  realtime_surface.py  stim_cirq_bridge.py
src/adaptive_qec/physics/: __init__.py  burst_detector.py  cosmic_ray.py  leakage.py
src/adaptive_qec/remediation/: __init__.py  pulse_synthesis.py
tests/: __init__.py  test_bridge.py  test_burst_detection.py  test_feedback_loop.py  test_frequency_analysis.py  test_full_pipeline.py  test_leakage.py  test_remediation.py  test_spam_noise.py
